--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <section id="About">
 					<h3 class="about-section"><b>About me</b></h3>
 					<div class="seperator size-small"><span></span></div>
-						<p class="p1">I'm Kriti. An introvert, An electronics graduate who however enjoy coding, browsing through Quora, love being with my paw friend and all baby animals.</p>
+						<p class="p1">I'm Kriti. An introvert, electronics graduate who enjoy coding, browsing through Quora, love being with my paw friend and all baby animals.</p>
 						<div class="row">
 							<div class="col-md-6 text-box">
 								<p class="p2"><b>In a few words</b></p>
