--- a/projects.html
+++ b/projects.html
@@ -200,7 +200,7 @@
 						</div>
 					</div>
 
-				   	<div class='center-alignment'><button class="all-projects"><a href="https://github.com/kritipandey/" target="_blank"><span>View all</span></a></button></div>
+				   	<!--div class='center-alignment'><button class="all-projects"><a href="https://github.com/kritipandey/" target="_blank"><span>View all</span></a></button></div-->
 				</section>	
 		    </div>    
 		    <!--Project section ends-->
