--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
                         	</div>
 
                         	<div id="project-text">
-                        		An app where we can add new recipes or update existing ones. Ingredients can also be added in shopping list. Developed with Angular and hosted using Firebase.
+                        		An app where we can add new recipes or update existing ones. Developed with Angular and hosted using Firebase.
                         	</div>		
                         	
 		        			<div class="project-button">
@@ -167,7 +167,7 @@
                         	</div>
 
                         	<div id="project-text">
-                        		An app where we can add new recipes or update existing ones. Ingredients can also be added in shopping list. Developed with Angular and hosted using Firebase. 
+                        		An app where we can add new recipes or update existing ones. Developed with Angular and hosted using Firebase. 
                         	</div>		
                         	
 		        			<div class="project-button">
