--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 			<div class="project-row row display-project-lg">
 				<div class="col-lg-6 col-md-6 col-sm-6">
 							<div id="project-image">
-								<img class="img-responsive" src="assets/name-card.PNG" alt="image" />
+								<img class="img-responsive" src="assets/name-card.png" alt="image" />
 							</div>	
 						</div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -154,7 +154,7 @@
 					<div class="project-row row display-project-sm">
 				<div class="col-lg-6 col-md-6 col-sm-6">
 							<div id="project-image">
-								<img class="img-responsive" src="assets/name-card.PNG" alt="image" />
+								<img class="img-responsive" src="assets/name-card.png" alt="image" />
 							</div>	
 						</div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
