--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 						</div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                         	<div class="project-title">
-                        		<b>Note Card</b>
+                        		<b>Name Card</b>
                         	</div>
 
                         	<div id="project-text">
@@ -159,7 +159,7 @@
 						</div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                         	<div class="project-title">
-                        		<b>Note Card</b>
+                        		<b>Name Card</b>
                         	</div>
 
                         	<div id="project-text">
