--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                         	</div>
 
                         	<div id="project-text">
-                        		Here we can create a simple name card which automatically get saved after creation so that we can restore it any time later until its not permanently deleted.
+                        		Here we can create a simple name card which automatically get saved so even if we delete it, we can restore it any time later until it's not permanently deleted.
                         	</div>		
                         	
 		        			<div class="project-button">
@@ -163,7 +163,7 @@
                         	</div>
 
                         	<div id="project-text">
-                        		Here we can create a simple name card which automatically get saved after creation so that we can restore it any time later until its not permanently deleted.
+                        		Here we can create a simple name card which automatically get saved so even if we delete it, we can restore it any time later until it's not permanently deleted.
                         	</div>		
                         	
 		        			<div class="project-button">
