--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                         	</div>
 
                         	<div id="project-text">
-                        		A name card that automatically get saved once created so even if we delete it, we can restore it any time later until it's not permanently deleted.
+                        		A name card that automatically gets saved once created so even if we delete it, we can restore it any time later until it's not permanently deleted.
                         	</div>		
                         	
 		        			<div class="project-button">
@@ -163,7 +163,7 @@
                         	</div>
 
                         	<div id="project-text">
-                        		A name card that automatically get saved once created so even if we delete it, we can restore it any time later until it's not permanently deleted.
+                        		A name card that automatically gets saved once created so even if we delete it, we can restore it any time later until it's not permanently deleted.
                         	</div>		
                         	
 		        			<div class="project-button">
