--- a/projects.html
+++ b/projects.html
@@ -265,7 +265,7 @@
 					<div class="social-icons">
 						<a href="https://www.linkedin.com/in/kriti-pandey-a905b05a/" title="Linkedin" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a><span>&nbsp;</span>
 						<a href="https://github.com/kritipandey" title="Github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a><span>&nbsp;</span>
-						<a href="https://twitter.com/ikritipandey" title="Twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						<!--a href="https://twitter.com/ikritipandey" title="Twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a-->
 					</div>
 
 					<p class="copyright-class"><span id="copy">&copy;</span> Kriti Pandey. All rights reserved.<br><br><br>
